# impl-trait-utils

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: rust.yml
trait-transformer/: Cargo.toml  README.md
trait-transformer/examples/: trait_transformer.rs
trait-variant/: Cargo.toml
trait-variant/examples/: trait_transformer.rs  variant.rs
trait-variant/src/: lib.rs  variant.rs
trait-variant/tests/: bounds.rs  colon-bounds.rs  name-colon-bounds.rs  name-colon.rs  same_name-colon-bounds.rs
trait_transformer/: Cargo.toml
trait_transformer/examples/: variant.rs
trait_transformer/src/: lib.rs  transformer.rs  variant.rs
trait_transformer_test/: Cargo.toml
trait_transformer_test/src/: main.rs
